    Das Skonto-Datum hat Priorität vor der letzten Fälligkeit.
    Zusätzlich kann ein Puffer in Tagen vom Zahlungsziel abgezogen werden (Standard 0). Das Verhalten muss für jeden
    Mandanten unter Mandantenkonfiguration -> Features -> SEPA aktiv eingeschaltet werden.
  - Schnellsuchen können auf Benutzerebene Programm->Benutzereinstellungen->Anzeigeoptionen konfiguriert werden.

Bugfixes:
- Bugfix #336 Beim Drucken mehrerer Rechnung aus dem Bericht heraus mit aktiviertem DMS bricht mit Fehlermeldung ab
- Bugfix #359 get_payment_select_options_for_bank_transaction vereinfachen



2017-12-12 - Release 3.5.1

Größere neue Features:

- WebshopApi

  WebshopApi mit bisher einem Konnektor für Shopware.
  Damit ist es möglich Bestellungen aus dem Shop abzuholen und Artikel
  abzugleichn.

Mittelgroße neue Features:

- DATEV-Export überarbeitet

  - Um Strukturtyp CSV-Export erweitert
  - DATEV-Export: Kostenstellen (Kost1 und Kost2) vorbelegen
  - DATEV-Export: Buchungssätze nach Abteilung filtern
  - DATEV-Export: Buchungen für einen bestimmten Zeitraum ab einem
    Buchungsdatum filtern. Z.B. wenn man einen DATEV-Export für Januar schon
    exportiert hat, und im Juni noch ein Buchung für Januar nachbucht, kann man
    mit "Erfassungsdatum Von: 01.06.2017" nur diese eine Buchung aus Januar
    exportieren.
  - Überlagerung mit Kunden- Lieferantennummer als Personenkonto möglich
    Anstatt des Sammelkontos kann die Kunden- oder Lieferantennummer aus
    den Stammdaten genommen werden, falls der Nummernkreis der DATEV-Konform
    für Personenkonten entspricht.
  - Belegfeld 2 wird nicht mehr gesetzt
  - Buchungsbeschreibung wird nicht mehr gesetzt

Kleinere neue Features und Detailverbesserungen:

  - Abteilungs-Auswahl konsequent alphabetisch sortieren
  - Buchungsvorlagen schneller über den Namen filtern (suchen).
  - Neues Recht Erzeugnisse unabhängig vom Status editieren (default 0)
  - SEPA-XML: alle Sonderzeichen filtern