@@ -41,6 +41,7 @@ Kleinere neue Features und Detailverbesserungen:
     Zusätzlich kann ein Puffer in Tagen vom Zahlungsziel abgezogen werden (Standard 0). Das Verhalten muss für jeden
     Mandanten unter Mandantenkonfiguration -> Features -> SEPA aktiv eingeschaltet werden.
   - Schnellsuchen können auf Benutzerebene Programm->Benutzereinstellungen->Anzeigeoptionen konfiguriert werden.
+  - SelfTests erweitert: Warnungen bei sehr laxer Buchungskonfiguration und bei verwaisten abgeglichen Bank-Transaktionen
 
 Bugfixes:
 - Bugfix #336 Beim Drucken mehrerer Rechnung aus dem Bericht heraus mit aktiviertem DMS bricht mit Fehlermeldung ab
